# src/api/backups/get-backups.ts
@@ -1,20 +1,21 @@
 import type { RequestHandler } from "express"
 import type { operations } from "../../openapi.js"
 import { HttpError, HttpStatus } from "../../utils/http.js"
-import { bufferToByteString, bytesToByteString, byteStringToBytes, parseByteString, parseUUID } from "../../utils/coersion.js"
+import { bufferToByteString, bytesToByteString, byteStringToBytes, parseByteString } from "../../utils/coersion.js"
 import type { Validators } from "../../lib/api/validation.js"
 import { createHash } from "node:crypto"
 import type { FileStorage } from "../../storage/interface.js"
-import { ecrecover, fromRpcSig, hashPersonalMessage } from "@ethereumjs/util"
 import { ErrorMessage } from "../../lib/api/errors.js"
+import { ERROR_MESSAGE } from "../../errors.js"
+import { ecrecover, fromRpcSig, hashPersonalMessage } from "@ethereumjs/util"
 
-type Params = operations['DeleteUserBackup']['parameters']['path']
-type ReqBody = operations['DeleteUserBackup']['requestBody']
-type ResBody = operations['DeleteUserBackup']['responses']['200']['content']['application/json']
-type ReqQuery = operations['DeleteUserBackup']['parameters']['query']
+type Params = operations['GetUserBackups']['parameters']['path']
+type ReqBody = operations['GetUserBackups']['requestBody']
+type ResBody = operations['GetUserBackups']['responses']['200']['content']['application/json']
+type ReqQuery = operations['GetUserBackups']['parameters']['query']
 type Handler = RequestHandler<Params, ResBody, ReqBody, ReqQuery>
 
-export default function createDeleteUserBackupHandler(opts: {
+export default function createGetBackupsHandler(opts: {
 	validators: Validators,
 	storage: FileStorage,
 }): Handler {
@@ -25,10 +26,24 @@ export default function createDeleteUserBackupHandler(opts: {
 
 	return async function(req, res, next) {
 		try {
-			const pubkey = parseByteString(validators.pubkeyParameter.validate(req.params.publicKey))
-			const userId = parseUUID(validators.userIdParameter.validate(req.params.userId))
-			const body = validators.deleteUserBackupRequest.validate(req.body)
-			const signature = parseByteString(body.signature)
+			const { publicKey: publicKeyParam, } = req.params
+			if (!validators.pubkey(publicKeyParam)) {
+				throw new HttpError(HttpStatus.BadRequest, {
+					message: ERROR_MESSAGE.INVALID_PUBLIC_KEY,
+					errors: validators.pubkey.errors,
+				})
+			}
+
+			const { signature: signatureParam } = req.query
+			if (!validators.byteString(signatureParam)) {
+				throw new HttpError(HttpStatus.BadRequest, {
+					message: ERROR_MESSAGE.INVALID_SIGNATURE,
+					errors: validators.byteString.errors,
+				})
+			}
+
+			const pubkey = parseByteString(publicKeyParam)
+			const signature = parseByteString(signatureParam)
 
 			const now = new Date()
 			// Now minus 10 minutes
@@ -41,9 +56,9 @@ export default function createDeleteUserBackupHandler(opts: {
 			const ymdub = `${(ub.getUTCMonth() + 1).toString().padStart(2, '0')}-${ub.getUTCDate().toString().padStart(2, '0')}-${ub.getUTCFullYear()}`
 
 			const legitMessages = new Set([
-				`${userId}-${ymdnow}`,
-				`${userId}-${ymdlb}`,
-				`${userId}-${ymdub}`
+				`${pubkey}-GET-BACKUPS-${ymdnow}`,
+				`${pubkey}-GET-BACKUPS-${ymdlb}`,
+				`${pubkey}-GET-BACKUPS-${ymdub}`
 			])
 
 			const esig = fromRpcSig(parseByteString(signature))
@@ -64,12 +79,26 @@ export default function createDeleteUserBackupHandler(opts: {
 			const hasher = createHash('sha256')
 			hasher.update(byteStringToBytes(pubkey))
 			const pubkeyHash = bufferToByteString(hasher.digest())
-
-			await storage.deleteUserBackup(req.ctx, pubkeyHash, userId)
-
-			const response: ResBody = { message: 'Ok' }
-
-			res.status(HttpStatus.OK).json(response)
+			const backups = await storage.getUserBackups(req.ctx, pubkeyHash)
+			if (backups == null) {
+				throw new HttpError(HttpStatus.NotFound, ErrorMessage.NO_BACKUPS_FOUND)
+			}
+			const responseBackups = new Array(backups.length)
+			for (let i = 0, len = backups.length; i < len; i++) {
+				const backup = backups[i]
+				const responseBackup: ResBody['backups'][number] = {
+					userId: backup.userId,
+					payload: backup.payload,
+					updatedAt: backup.updatedAt
+				}
+				responseBackups[i] = responseBackup
+			}
+			const response: ResBody = {
+				backups: responseBackups,
+			}
+			res
+				.status(HttpStatus.OK)
+				.json(response)
 		} catch (err) {
 			next(err)
 		}
