# src/api/get-schema-yaml.ts
@@ -2,13 +2,13 @@ import type { RequestHandler } from "express"
 import type { operations } from "../openapi.js"
 import { HttpStatus } from "../utils/http.js"
 
-type Params = operations['GetSchema']['parameters']['path']
-type ReqBody = operations['GetSchema']['requestBody']
-type ResBody = operations['GetSchema']['responses']['200']['content']['application/yaml']
-type ReqQuery = operations['GetSchema']['parameters']['query']
+type Params = operations['GetSchemaYaml']['parameters']['path']
+type ReqBody = operations['GetSchemaYaml']['requestBody']
+type ResBody = operations['GetSchemaYaml']['responses']['200']['content']['application/yaml']
+type ReqQuery = operations['GetSchemaYaml']['parameters']['query']
 type Handler = RequestHandler<Params, ResBody, ReqBody, ReqQuery>
 
-export default function createGetSchemaHandler(opts: {
+export default function createGetSchemaYamlHandler(opts: {
 	openApiDocYaml: string
 }): Handler {
 	const { openApiDocYaml, } = opts
@@ -21,3 +21,4 @@ export default function createGetSchemaHandler(opts: {
 			.send(response)
 	}
 }
+
